--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js",
+    "prod": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/ChaitanyaAgarwal97/task-manager#readme",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongoose": "^7.2.3"
+    "mongoose": "^7.2.3",
+    "nodemon": "^2.0.22"
   }
 }
